Fix dropdown menus - remove overflow hidden from header

--- a/design.css
+++ b/design.css
@@ -80,7 +80,6 @@ header{
     position: relative;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
 main{
